NP - DP Management grid - CM to control DPO automation
